new feature background sound(in to store)

--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
         {
           "photosPermission": "Cho phép $(PRODUCT_NAME) truy cập thư viện ảnh để chọn ảnh rác thải."
         }
-      ]
+      ],
+      "expo-font"
     ],
     "splash": {
       "image": "./assets/splash-icon.png",
