--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-av": "~16.0.8",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
